<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingActivity">

    <Button
        android:id="@+id/detailed_direction_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="30dp"
        android:onClick="onDetailedDirectionButton"
        android:paddingVertical="10dp"
        android:text="Detailed Directions"
        app:layout_constraintBottom_toTopOf="@+id/brief_direction_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/brief_direction_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="onBriefDirectionButton"
        android:paddingVertical="15dp"
        android:text="Brief Directions"
        app:layout_constraintBottom_toTopOf="@+id/summary_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_direction_button" />

    <Button
        android:id="@+id/summary_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:onClick="onSummaryButton"
        android:paddingVertical="15dp"
        android:text="Summary"
        app:layout_constraintBottom_toTopOf="@+id/deletePlan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brief_direction_button" />

    <Button
        android:id="@+id/deletePlan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:onClick="onDeletePlan"
        android:text="Delete Plan"
        app:layout_constraintStart_toStartOf="@+id/summary_button"
        app:layout_constraintTop_toBottomOf="@+id/summary_button" />

    <EditText
        android:id="@+id/latitiude_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:ems="10"
        android:hint="Mock Latitude"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/longitude_input"
        app:layout_constraintStart_toStartOf="@+id/longitude_input" />

    <EditText
        android:id="@+id/longitude_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="Mock Longitude"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/gps_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mock Latitude"
        app:layout_constraintBottom_toTopOf="@+id/latitiude_input"
        app:layout_constraintStart_toStartOf="@+id/latitiude_input" />

    <TextView
        android:id="@+id/long_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mock Longitude"
        app:layout_constraintBottom_toTopOf="@+id/longitude_input"
        app:layout_constraintStart_toStartOf="@+id/longitude_input" />

    <Switch
        android:id="@+id/gps_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Enable GPS"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>