...
        android:layout_marginTop="6dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_green_dark"
        android:hint="Back"
        android:onClick="onPreviousButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/direction_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@+id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_display"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/next_button"
        app:layout_constraintTop_toBottomOf="@+id/direction_items" />

    <ImageButton
        android:id="@+id/setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:onClick="onSettingButtonClicked"
...
        app:layout_constraintStart_toEndOf="@+id/direction_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@android:drawable/ic_menu_manage" />

    <ImageButton
        android:id="@+id/reload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onReloadClicked"
        app:layout_constraintBottom_toTopOf="@+id/prev_display"
        app:layout_constraintEnd_toStartOf="@+id/direction_title"
        app:layout_constraintHorizontal_bias="0.142"
...
